--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ table{ width: 100%;
        width: 10%;
         }
         #login{
-            width: 70%;}
+            width: 70px;}
         #tr1{height:  50px;}
         #tr2{height:  50px;}
         #tr3{height:  50px;}
