--- a/style2.css
+++ b/style2.css
@@ -33,8 +33,7 @@ table{ width: 100%;
         .azulfundo{background-color: blue;}
         
         .ultimo{font-size: 50px;
-        height: 50px;
-        width: 50px;}
+      }
         
         h1 {font-size: 25px;}
         h2 {font-size: 55px;}
