--- a/style3.css
+++ b/style3.css
@@ -24,7 +24,8 @@ table{ width: 100%;
             height:  50px;}
         .atm{text-align: right;}
         .btm{text-align: left;}
-        .centro{text-align: center;}
+        .centro{text-align: center;
+        color: white;}
 
         .maior{font-size: 30px;
             float: left
